# upside-my-app-01

./: Dockerfile  pyproject.toml
.github/workflows/: cd.yml  ci.yml
