[project]
name = "upside-my-app-01"
version = "0.1.0"
description = "DevOps demo FastAPI app"
authors = [{ name = "liam191" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi>=0.135,<0.136",
    "uvicorn[standard]==0.34.0",
    "pydantic>=2.9,<3.0",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "8.3.5"
httpx = "0.28.1"
pytest-asyncio = "0.25.3"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
